<resources>
    <string name="app_name">login</string>
    <string name="facebook_app_id">2100807303466531</string>
    <string name="fb_login_protocol_scheme">fb2100807303466531</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
    <string name="textview">TextView</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="hello">Hello</string>
    <string name="home_page">Home Page</string>
    <string name="help">Help</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="welcome_to_login_screen">Welcome to Login Screen !!</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="invalid_details">Invalid Details</string>
    <string name="welcome">Welcome !!</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="todo">TODO</string>
    <string name="tap_on_mic_to_speak">Tap on mic to speak</string>
    <string name="tap_to_open_mic">Tap to Open Mic</string>
    <string name="input_text">Input Text</string>
    <string name="enter">Enter</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="enter_text_to_get_as_speech">Enter text to get as speech</string>
    <string name="create_new_acount">Create New Acount !!</string>
    <string name="reset">RESET</string>
    <string name="forgot_password">Forgot Password</string>

</resources>
