<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.login.Register"
    android:background="@color/grey">

    <TextView
        android:id="@+id/newAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/create_new_acount"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:layout_marginTop="44dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/password"
        android:background="@android:color/background_light"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:background="@android:color/background_light"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newAccount"
        android:layout_alignStart="@+id/newAccount"
        android:layout_below="@+id/confirm_password"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:onClick="Register"
        android:text="@string/register"
        android:textColor="@color/com_facebook_button_login_silver_background_color" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/invalid_details"
        android:textColor="@color/colorAccent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/confirm_password"
        android:layout_alignRight="@+id/confirm_password"
        android:layout_alignTop="@+id/button2"
        android:text="@string/reset"
        android:onClick="resetfields"
        android:background="@color/colorPrimary"
        android:textColor="@color/com_facebook_button_login_silver_background_color" />

</RelativeLayout>
