<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.login.MainActivity"
    android:background="@color/grey">


    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/welcome_to_login_screen"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/invalid_credentials"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        android:layout_below="@+id/welcomeMessage" />

    <EditText
        android:id="@+id/loginusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/welcomeMessage"
        android:layout_alignRight="@+id/welcomeMessage"
        android:layout_alignTop="@+id/textView"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginusername"
        android:layout_alignStart="@+id/loginusername"
        android:layout_below="@+id/loginusername"
        android:layout_marginTop="12dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginpassword"
        android:layout_alignStart="@+id/loginpassword"
        android:layout_below="@+id/loginpassword"
        android:layout_marginTop="21dp"
        android:background="@color/colorPrimary"
        android:onClick="checkCredentials"
        android:text="@string/login"
        android:textColor="@color/com_facebook_button_login_silver_background_color" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/LoginMessage"
        android:layout_toRightOf="@+id/LoginMessage"/>

    <TextView
        android:id="@+id/LoginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:visibility="invisible"
        android:layout_below="@+id/facebook_sign_in_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/facebook_sign_in_button"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_toEndOf="@+id/login"
        android:layout_toRightOf="@+id/login"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/com_facebook_button_send_background_color"
        android:clickable="true"
        android:onClick="email"/>

</RelativeLayout>
