<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.login.Index"
    android:background="@color/grey">

    <Button
        android:id="@+id/homePge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button5"
        android:layout_marginTop="87dp"
        android:onClick="HomePage"
        android:text="@string/go_to_home_page" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/homePge"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="43dp"
        android:onClick="Settings"
        android:text="@string/settings" />

    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:text="@string/help"
        android:onClick="Help"/>


</RelativeLayout>
