<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.login.WelcomeActivity"
    android:background="@color/grey">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginTop="52dp"
        android:layout_toLeftOf="@+id/button9"
        android:layout_toStartOf="@+id/button9"
        android:background="@color/colorPrimary"
        android:onClick="signIn"
        android:text="@string/sign_in"
        android:textColor="@color/com_facebook_button_login_silver_background_color" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:background="@color/colorPrimary"
        android:onClick="Register"
        android:text="@string/sign_up"
        android:textColor="@color/com_facebook_button_login_silver_background_color" />

</RelativeLayout>
